feat: 不要なAPIの削除とAPI仕様書の更新
